<resources>
	<string name="app_name">iTunes</string>
	<string name="search_title">Search</string>
	<string name="error">Error</string>
	<string name="price_title">Price:</string>
	<string name="year_title">Year:</string>
	<string name="explicitness_title">Explicitness:</string>
	<string name="track_count_title">Track Count:</string>
	<string name="copyright_title">Copyright:</string>
	
	<string name ="internet_connection_is_not_available">Internet connection is not available</string>
</resources>
