<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingLeft="16dp"
	android:paddingRight="16dp">
	
	<ImageView
		android:id="@+id/image_view_details"
		android:layout_width="140dp"
		android:layout_height="140dp"
		android:layout_marginTop="16dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:srcCompat="@tools:sample/avatars" />
	
	<TextView
		android:id="@+id/text_view_details_title"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginLeft="16dp"
		android:maxLines="2"
		android:textSize="22sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/image_view_details"
		app:layout_constraintTop_toTopOf="@+id/image_view_details"
		tools:text="Can't Help Falling In Love" />
	
	<TextView
		android:id="@+id/text_view_details_artist_name"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginLeft="16dp"
		android:layout_marginTop="8dp"
		android:maxLines="2"
		android:textSize="18sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/image_view_details"
		app:layout_constraintTop_toBottomOf="@+id/text_view_details_title"
		tools:text="Elvis Presley" />
	
	<TextView
		android:id="@+id/text_view_details_genre"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginLeft="16dp"
		android:layout_marginTop="8dp"
		android:textSize="18sp"
		app:layout_constraintStart_toEndOf="@+id/image_view_details"
		app:layout_constraintTop_toBottomOf="@+id/text_view_details_artist_name"
		tools:text="Rock" />
	
	<TextView
		android:id="@+id/text_view_details_year_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/year_title"
		android:textSize="18sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/image_view_details" />
	
	<TextView
		android:id="@+id/text_view_details_year"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:gravity="right"
		android:textSize="18sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toEndOf="@+id/text_view_details_year_title"
		app:layout_constraintTop_toTopOf="@+id/text_view_details_year_title"
		tools:text="1961" />
	
	<TextView
		android:id="@+id/text_view_details_explicitness_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:text="@string/explicitness_title"
		android:textSize="18sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/text_view_details_year_title" />
	
	<TextView
		android:id="@+id/text_view_details_explicitness"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:gravity="right"
		android:textSize="18sp"
		app:layout_constraintBottom_toBottomOf="@+id/text_view_details_explicitness_title"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/text_view_details_explicitness_title"
		app:layout_constraintTop_toTopOf="@+id/text_view_details_explicitness_title"
		tools:text="Not Explicit" />
	
	<TextView
		android:id="@+id/text_view_details_price_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:text="@string/price_title"
		android:textSize="18sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/text_view_details_explicitness_title" />
	
	<TextView
		android:id="@+id/text_view_details_price"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:gravity="right"
		android:textSize="18sp"
		app:layout_constraintBottom_toBottomOf="@+id/text_view_details_price_title"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toEndOf="@+id/text_view_details_price_title"
		app:layout_constraintTop_toTopOf="@+id/text_view_details_price_title"
		tools:text="$1.99" />
	
	<TextView
		android:id="@+id/text_view_details_copyright_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:text="@string/copyright_title"
		android:textSize="18sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/text_view_details_track_count_title" />
	
	<TextView
		android:id="@+id/text_view_details_copyright"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:gravity="right"
		android:textSize="18sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/text_view_details_copyright_title"
		app:layout_constraintTop_toBottomOf="@+id/text_view_details_track_count_title"
		tools:text="Lesser GPL 3.0" />
	
	<TextView
		android:id="@+id/text_view_details_track_count_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:text="@string/track_count_title"
		android:textSize="18sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/text_view_details_price_title" />
	
	<TextView
		android:id="@+id/text_view_details_track_count"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:gravity="right"
		android:textSize="18sp"
		app:layout_constraintBottom_toBottomOf="@+id/text_view_details_track_count_title"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/text_view_details_track_count_title"
		app:layout_constraintTop_toTopOf="@+id/text_view_details_track_count_title"
		tools:text="12" />
	
	<View
		android:id="@+id/view_details_line"
		android:layout_width="0dp"
		android:layout_height="1px"
		android:layout_marginTop="8dp"
		android:background="@android:color/darker_gray"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/text_view_details_copyright" />
	
	<ProgressBar
		android:id="@+id/progress_bar_details"
		style="?android:attr/progressBarStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:indeterminate="true"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/view_details_line" />
	
	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/recycler_view_details_songs"
		android:layout_width="0dp"
		android:layout_height="0dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/view_details_line" />

</androidx.constraintlayout.widget.ConstraintLayout>